--- a/index.html
+++ b/index.html
@@ -31,114 +31,141 @@
     const prevPageButton = document.querySelector('#prevPage');
     const nextPageButton = document.querySelector('#nextPage');
 
-
     let currentPage = 1; // Página atual
     const projectsPerPage = 10; // Projetos por página
     let projects = []; // Array para armazenar todos os projetos
     const tipyingCategory = ['ghostwriting', 'ebooks', 'pdf', 'articles', 'fiction', 'reviews', 'article_submission'];
     const virtualAssistantCategory = ['data_processing', 'data_entry', 'excel', 'video_upload', 'transcription', 'web_search', 'technical_support', 'phone_support', 'desktop_support', 'email_handling'];
     const socialMediaCategory = ['website_design', 'logo_design', 'flash', 'banner_design', 'photoshop', 'industrial_design', 'rendering', 'typography', 'animation'];
+    let fetching = false; // Variável para controlar se já está buscando
 
     filterButton.addEventListener('click', (e) => {
       e.preventDefault();
-      fetchProjects(currentPage, filterOptions.value);
+      if (!fetching) {
+        currentPage = 1; // Reset da página para a primeira
+        fetchProjects(currentPage, filterOptions.value);
+      }
     });
 
-    async function fetchProjects(page, category='all') {
-        try {
-            const response = await fetch('https://www.freelancer.com/api/projects/0.1/projects/all/');
-            if (!response.ok) {
-                throw new Error('Erro na solicitação da API');
-            }
-            const data = await response.json();
-            console.log(data, category);
-            if (data.result && data.result.projects) {
-                projects = data.result.projects; // Armazena todos os projetos
-
-                console.log(projects);
-                const regexCategory = new RegExp(`^${category}/`, 'i'); // Expressão regular
-
-                const filteredProjects = projects.filter(item => {
-                  if (category === 'all') {
-                      return true; // Mostrar todos os projetos
-                  } else if (category === 'typing_professional') {
-                      return tipyingCategory.some(word => item.seo_url.match(new RegExp(`^(${word})/`, 'i')));
-                  } else if (category === 'visual_assistant') {
-                      return virtualAssistantCategory.some(word => item.seo_url.match(new RegExp(`^(${word})/`, 'i')));
-                  } else if (category === 'social_media_professional') {
-                      return socialMediaCategory.some(word => item.seo_url.match(new RegExp(`^(${word})/`, 'i')));
-                  }
-                  return false;
-                });
-                console.log(filteredProjects);
-
-                // Calcular o índice inicial e final dos projetos a serem exibidos
-                const startIndex = (page - 1) * projectsPerPage;
-                const endIndex = startIndex + projectsPerPage;
-
-                // Filtrar os projetos para a página atual
-                const projectsToDisplay = projects.slice(startIndex, endIndex);
-
-                // Limpar a lista antes de adicionar novos projetos
-                mainList.innerHTML = '';
-
-                projectsToDisplay.forEach(item => {
-                    const article = document.createElement('article');
-                    article.className = 'api-result-list';
-
-                    const contentContainer = document.createElement('div');
-                    contentContainer.className = 'content-container';
-                    contentContainer.innerHTML = `
-                        <h6>${item.title}</h6>
-                        <p>${item.preview_description}</p>
-                    `;
-
-                    const buttonContainer = document.createElement('div');
-                    buttonContainer.className = 'button-container';
-                    const button = document.createElement('button');
-                    button.innerHTML = `<a href="https://www.freelancer.com/projects/${item.seo_url}" target="_blank">Apply Now »</a>`;
-                    buttonContainer.appendChild(button);
-
-                    article.appendChild(contentContainer);
-                    article.appendChild(buttonContainer);
-
-                    mainList.appendChild(article);
-                });
-
-                // Atualizar os botões de página
-                updatePaginationButtons();
-            } else {
-                console.log('Nenhum projeto encontrado.');
-            }
-        } catch (error) {
-            console.error('Erro na solicitação da API: ' + error.message);
+    async function fetchProjects(page, category = 'all', offset = 0) {
+      try {
+        fetching = true; // Indica que está fazendo a busca
+        const response = await fetch(`https://www.freelancer.com/api/projects/0.1/projects/all/?offset=${offset}`);
+        if (!response.ok) {
+          throw new Error('Erro na solicitação da API');
         }
+        const data = await response.json();
+
+        console.log(data, category);
+        if (data.result && data.result.projects) {
+          const newProjects = data.result.projects;
+
+          if (offset === 0) {
+            projects = newProjects; // Na primeira chamada, substituir os projetos existentes
+          } else {
+            projects = [...projects, ...newProjects]; // Nas chamadas subsequentes, acrescentar novos projetos à lista
+          }
+
+          console.log(projects);
+          const regexCategory = new RegExp(`^${category}/`, 'i'); // Expressão regular
+
+          const completeList = [];
+          const filteredProjects = projects.filter((item) => {
+            if (category === 'all') {
+              return true; // Mostrar todos os projetos
+            } else if (category === 'typing_professional') {
+              return tipyingCategory.some((word) => item.seo_url.match(new RegExp(`^(${word})/`, 'i')));
+            } else if (category === 'visual_assistant') {
+              return virtualAssistantCategory.some((word) => item.seo_url.match(new RegExp(`^(${word})/`, 'i')));
+            } else if (category === 'social_media_professional') {
+              return socialMediaCategory.some((word) => item.seo_url.match(new RegExp(`^(${word})/`, 'i')));
+            }
+            return false;
+          });
+
+          filteredProjects.forEach((item) => {
+            completeList.push(item);
+          });
+
+          if (completeList.length < 100 && offset < 900) {
+            console.log('A lista completa a ser disponibilizada ainda não possui 100 itens. Continuando a busca com offset ' + (offset + 100));
+            // Chama a função novamente com um novo offset para buscar mais itens
+            fetchProjects(currentPage, category, offset + 100);
+          } else {
+            fetching = false; // Indica que terminou a busca
+            console.log('Perfeito! Chegamos a 100 itens em uma lista.');
+            console.log('complete-list', completeList);
+
+            // Calcular o índice inicial e final dos projetos a serem exibidos
+            const startIndex = (page - 1) * projectsPerPage;
+            const endIndex = startIndex + projectsPerPage;
+
+            // Filtrar os projetos para a página atual
+            const projectsToDisplay = completeList.slice(startIndex, endIndex);
+
+            // Limpar a lista antes de adicionar novos projetos
+            mainList.innerHTML = '';
+
+            projectsToDisplay.forEach((item) => {
+              const article = document.createElement('article');
+              article.className = 'api-result-list';
+
+              const contentContainer = document.createElement('div');
+              contentContainer.className = 'content-container';
+              contentContainer.innerHTML = `
+                <h6>${item.title}</h6>
+                <p>${item.preview_description}</p>
+              `;
+
+              const buttonContainer = document.createElement('div');
+              buttonContainer.className = 'button-container';
+              const button = document.createElement('button');
+              button.innerHTML = `<a href="https://www.freelancer.com/projects/${item.seo_url}" target="_blank">Apply Now »</a>`;
+              buttonContainer.appendChild(button);
+
+              article.appendChild(contentContainer);
+              article.appendChild(buttonContainer);
+
+              mainList.appendChild(article);
+            });
+
+            // Atualizar os botões de página
+            updatePaginationButtons();
+          }
+        } else {
+          console.log('Nenhum projeto encontrado.');
+          fetching = false; // Indica que terminou a busca
+        }
+      } catch (error) {
+        console.error('Erro na solicitação da API: ' + error.message);
+        fetching = false; // Indica que terminou a busca
+      }
     }
 
     function updatePaginationButtons() {
-        const totalPages = Math.ceil(projects.length / projectsPerPage);
+      const totalPages = Math.ceil(projects.length / projectsPerPage);
 
-        prevPageButton.disabled = currentPage === 1;
-        nextPageButton.disabled = currentPage === totalPages;
+      prevPageButton.disabled = currentPage === 1;
+      nextPageButton.disabled = currentPage === totalPages;
     }
 
     prevPageButton.addEventListener('click', () => {
-        if (currentPage > 1) {
-            currentPage--;
-            fetchProjects(currentPage);
-        }
+      if (currentPage > 1 && !fetching) {
+        currentPage--;
+        fetchProjects(currentPage);
+      }
     });
 
     nextPageButton.addEventListener('click', () => {
-        const totalPages = Math.ceil(projects.length / projectsPerPage);
-        if (currentPage < totalPages) {
-            currentPage++;
-            fetchProjects(currentPage);
-        }
+      const totalPages = Math.ceil(projects.length / projectsPerPage);
+      if (currentPage < totalPages && !fetching) {
+        currentPage++;
+        fetchProjects(currentPage);
+      }
     });
 
     // Chame a função para carregar a primeira página
     fetchProjects(currentPage);
-</script>
+  </script>
 </body>
 </html>
