--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   </div>
 
   <script>
+
+    // Nesta branch, observe o console do navegador. O sistema de paginacao nao esta funcionando.
+    // Mas a dinamica de local storage vs requisicoes esta sendo feita.
+
     const mainList = document.querySelector('#projects-main-list');
     const filterOptions = document.querySelector('#filter-options');
     const filterButton = document.querySelector('.filter-button');
