Atualizando dinamica do localStorage para salvar apenas os itens filtrados como all

--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
             });
           });
           console.log('all', all);
+          localStorage.removeItem('saved_freelancer_projects');
+          localStorage.setItem('saved_freelancer_projects', JSON.stringify(filteredProjects));
           filteredProjects.forEach((item) => {
             item.forEach((subItem) => {
               completeList.push(subItem);
